package com.artemissoftware.pokeconnect.features.pokedex

internal object TestTags {

    const val SEARCH_BAR = "search_bar"
    const val POKEDEX_GRID = "pokedex_grid"
}