<resources>
    <string name="app_name">PokeConnect</string>
    <string name="species">Species</string>
    <string name="height">Height</string>
    <string name="height_label">Height: </string>
    <string name="weight">Weight</string>
    <string name="weight_label">Weight: </string>
    <string name="abilities">Abilities</string>
    <string name="abilities_label">Abilities: </string>
    <string name="page_not_found">Page not found</string>
    <string name="favorites">Favorites</string>
    <string name="here_are_your_favorites">Here are your favorites</string>
    <string name="pokedex">Pokédex</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_socket_time_out">Socket timeout</string>
    <string name="unknown_error">An error occurred</string>
    <string name="unknown_host_error">Unknown host error</string>
    <string name="error_not_mapped">Error not mapped</string>
    <string name="search">Search</string>
    <string name="name_number">Name or number</string>
    <string name="name_number_favorites">Favorite name or number</string>
    <string name="search_name_number">Search by name or number</string>
    <string name="search_pokemon_by_name_number">Search for a Pokémon by name or using its National Pokédex number</string>
    <string name="no_favorites_found">No favorites found</string>
    <string name="search_no_results">No pokemons found</string>
    <string name="search_detail_not_found">No detail found for the pokemon</string>
    <string name="no_stats_available">No stats available</string>
    <string name="try_again">Try again</string>
    <string name="error_occurred_try_reload">An error occurred - reload</string>
    <string name="not_found">Not found</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="title_activity_empty">EmptyActivity</string>
</resources>